--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "homepage": "https://github.com/abhijitjadhav1998/portfolio",
+  "homepage": "https://abhijitjadhav1998.github.io/",
   "name": "resume",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.4.0",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-easy-emoji": "^1.6.1",
     "react-scripts": "5.0.0",
     "react-typical": "^0.1.3",
     "web-vitals": "^2.1.4"
@@ -43,8 +43,6 @@
     ]
   },
   "devDependencies": {
-    "@iconify-icons/uil": "^1.2.1",
-    "@iconify/react": "^3.2.1",
     "gh-pages": "^3.2.3"
   }
 }
